Fri Feb 10 15:28:50 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_typecode/value_typecode.cpp:

          Applied the fix suggested by Johnny Willemsen
          <jwillemsen@remedy.nl> in [BUGID:2145], since it was
          never supplied by the bug reporter, and closed the entry.

Fri Feb 10 15:24:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/configurations.html:
          Fixed link

Fri Feb 10 15:00:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * tao/ServerRequestInterceptor_Adapter.h
        * tao/PI_Server/ServerInterceptorAdapter.cpp:
        * tao/PortableServer/Object_Adapter.cpp:
          Correct compile problems for TAO_HAS_EXTENDED_FT_INTERCEPTORS
          builds. This build configuration has been left behind with
          recent changes.

Fri Feb 10 14:35:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/EC_Mcast/run_test.pl:
        * orbsvcs/tests/EC_MT_Mcast/run_test.pl:
          When we can't spawn the processes, just exit directly instead
          of waiting on a timeout. Speedsup the daily builds when we
          can't build the executables

Fri Feb 10 11:21:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_CDR_Message_Sender.cpp:
          Use prefix increment

        * orbsvcs/orbsvcs/Event/ECG_UDP_Protocol.h:
          Removed this file

        * orbsvcs/tests/EC_MT_Mcast/EC_MT_Mcast.mpc:
        * orbsvcs/tests/EC_MT_Mcast/MCast.cpp:
        * orbsvcs/tests/EC_MT_Mcast/svc.conf:
          Link in the strategies lib, this way this test can be used
          also in a static environment

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connector.cpp:
          Initialise pointer with 0

Fri Feb 10 11:10:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2319_Regression/*:
          Added regression for this bug. Thanks to  Toha Bakanovsky