@@ -1,3 +1,11 @@
+Fri Feb 10 15:49:17 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>
+
+        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp:
+
+          Reverted back a change I did because its non-compliance
+          with the FT Spec.
+          Thu Feb  9 20:06:18 UTC 2006  Wallace Zhang
+
 Fri Feb 10 15:28:50 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_typecode/value_typecode.cpp:
